gap fixed again since it looked wrong

--- a/React Practise/note-typescript/src/App.css
+++ b/React Practise/note-typescript/src/App.css
@@ -122,7 +122,7 @@
 
 .noteitem--buttons {
   display: flex;
-  gap: 12px;
+  gap: 8px;
 }
 
 .noteitem--buttons button {
